--- a/extension/popup.html
+++ b/extension/popup.html
@@ -70,7 +70,8 @@
       <h2 style="font-size: 16px; margin-bottom: 8px;">Simplify your prompt</h2>
       <textarea id="promptInput" placeholder="Enter your prompt here..." style="width: 100%; min-height: 60px; margin-bottom: 10px;"></textarea>
       <button id="simplifyActionBtn" style="width: 100%; background: #6366f1; color: white; border: none; border-radius: 6px; padding: 8px 0; font-size: 15px; cursor: pointer;">Click to Simplify!</button>
-      <div id="simplifiedOutput" style="margin-top: 14px; background: #f8f9fa; border-radius: 6px; padding: 10px; min-height: 30px; font-size: 15px"></div>
+      <div id="simplifiedOutput" type="text" style="margin-top: 14px; background: #f8f9fa; border-radius: 6px; padding: 10px; min-height: 30px; font-size: 15px"></div>
+      <button onclick="copyToClipboard()">Copy text</button>
     </div>
 
     <!-- Loading -->
